@startuml

title __VIEW's Class Diagram__\n

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.DJHistoryFragment {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.DJNewPartyActivity {
          {static} - test : boolean
          + onDestroy()
          {static} + setTest()
          # onCreate()
          - getPartyGenres()
          - isMusicGenreSpecified()
          - isPartyValid()
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.HistoryPopUp {
          ~ context : Context
          ~ historyTable : TableLayout
          - djId : String
          + HistoryPopUp()
          + fillTable()
          + showPopupWindow()
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.MainActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.PartyActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.PlaylistFragment {
          {static} + PARTYGURU : String
          + onCreateView()
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.ScanForPartiesActivity {
          {static} - test : boolean
          {static} + setTest()
          # onCreate()
          - connectToDefaultDevice()
      }
    }
  }
  

  com.kaizen.nightfolks.view.DJNewPartyActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.controller.utility.AppData : appData
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.controller.BTNetwork.Participant : dj
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.databinding.DjNewPartyBinding : newPartyBinding
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.controller.partyManager.PartyService : partyService
  com.kaizen.nightfolks.view.HistoryPopUp -up-|> android.app.Activity
  com.kaizen.nightfolks.view.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.PartyActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.PartyActivity o-- com.kaizen.nightfolks.controller.BTNetwork.Participant : participant
  com.kaizen.nightfolks.view.PartyActivity o-- com.kaizen.nightfolks.databinding.PartyActivityBinding : partyActivityBinding
  com.kaizen.nightfolks.view.PlaylistFragment -up-|> androidx.fragment.app.Fragment
  com.kaizen.nightfolks.view.PlaylistFragment o-- com.kaizen.nightfolks.model.entities.Playlist : songs
  com.kaizen.nightfolks.view.ScanForPartiesActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.ScanForPartiesActivity o-- com.kaizen.nightfolks.controller.BTNetwork.Participant : guru
  com.kaizen.nightfolks.view.ScanForPartiesActivity o-- com.kaizen.nightfolks.databinding.ScanForPartyActivityBinding : scanForPartyActivityBinding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
